--- a/index.html
+++ b/index.html
@@ -7,20 +7,16 @@
     <link rel="stylesheet" href="valen.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Happy Valentine’s Day! ❤</h1>
-        <p>Program Gabut Arya hehehhehe</p>
-        
-        <textarea id="message" placeholder="Tulis kalimat romantis di sini hehe"></textarea>
-        <button onclick="generateLink()">Buat Link Ucapan</button>
-        
-        <div id="output" class="hidden">
-            <p>Bagikan link ke doi:</p>
-            <input type="text" id="share-link" readonly>
-            <button onclick="copyLink()">Salin Link</button>
-        </div>
+
+    <div id="input-container" class="container">
+        <h1>💖 Buat Ucapan Valentine 💖</h1>
+        <textarea id="message" placeholder="Tulis ucapanmu di sini..."></textarea>
+        <button onclick="generateLink()">Buat Link</button>
+        <input type="text" id="share-link" class="hidden" readonly>
+        <button id="copy-btn" class="hidden" onclick="copyLink()">Salin Link</button>
     </div>
 
     <script src="valen.js"></script>
+
 </body>
 </html>
