--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="output" class="hidden">
             <p>Bagikan link ini:</p>
             <input type="text" id="share-link" readonly>
-            <button onclick="copyLink()">Salin Link</button>
+            <button id="copy-btn" class="hidden" onclick="copyLink()">Salin Link</button>
         </div>
     </div>
 
