--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="valen.css">
 </head>
 <body>
-    <div class="container">
+    <div id="input-container" class="container">
         <h1>Happy Valentine’s Day! ❤</h1>
         <p>Project gabut arya hehehehe</p>
         
