--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valentine Link Generator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="valen.css">
 </head>
 <body>
 
@@ -17,6 +17,6 @@
     </div>
 
     <!-- Pastikan script.js terhubung dengan benar -->
-    <script src="script.js"></script> <!-- Skrip diletakkan setelah elemen HTML agar terdeteksi -->
+    <script src="valen.js"></script> <!-- Skrip diletakkan setelah elemen HTML agar terdeteksi -->
 </body>
 </html>
