--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Happy Valentine’s Day! ❤</h1>
         <p>By Arya Eka Nugraha</p>
         
-        <textarea id="message" placeholder="Tulis ucapan romantis di sini..."></textarea>
+        <textarea id="message" placeholder="Tulis ucapan romantis di sini hehehe"></textarea>
         <button onclick="generateLink()">Buat Link Ucapan</button>
         
         <div id="output" class="hidden">
