--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <h2>Portfolio</h2>
             <div class="portfolio-items">
                 <div class="portfolio-item">
-                    <h3>-</h3>
-                    <p>-</p>
+                    <h3>Web Mau Ga Jadi Pacarku?</h3>
+                    <p><a href="https://fascinating-kringle-46fbb9.netlify.app/">https://fascinating-kringle-46fbb9.netlify.app/</a>.</p>
                 </div>
                 <div class="portfolio-item">
                     <h3>-</h3>
