--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <div class="portfolio-items">
                 <div class="portfolio-item">
                     <h3>Web Mau Ga Jadi Pacarku?</h3>
-                    <p><a href="https://fascinating-kringle-46fbb9.netlify.app/">https://fascinating-kringle-46fbb9.netlify.app/</a>.</p>
+                    <p><a href="https://fascinating-kringle-46fbb9.netlify.app/">Click Here</a>.</p>
                 </div>
                 <div class="portfolio-item">
-                    <h3>-</h3>
-                    <p>-</p>
+                    <h3>Web Ucapan Valentine</h3>
+                    <p><a href="willowy-llama-e4c4a6.netlify.app">Click Here</a>.</p>
                 </div>
                 <div class="portfolio-item">
                     <h3>-</h3>
