--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="portfolio-item">
                     <h3>Web Ucapan Valentine</h3>
-                    <p><a href="willowy-llama-e4c4a6.netlify.app">Click Here</a>.</p>
+                    <p><a href="https://willowy-llama-e4c4a6.netlify.app">Click Here</a>.</p>
                 </div>
                 <div class="portfolio-item">
                     <h3>-</h3>
