--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <img src="Aryaeka.jpg" alt="Foto Profil" class="profile-photo">
                 <div>
                     <h2>About Me</h2>
-                    <p>My Name is Arya Eka Nugraha.I am a student at PGRI University Semarang who has interest in computer science.I`m at university studying the python programing language.</p>
+                    <p>My Name is Arya Eka Nugraha.I'am a student at PGRI University Semarang who has interest in computer science.I`m at university studying the python programing language.</p>
                 </div>
             </div>
         </div>
