--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h2>Portfolio</h2>
             <div class="portfolio-items">
                 <div class="portfolio-item">
-                    <h3>Web Mau Ga Jadi Pacarku?</h3>
+                    <h3>Web Anti Di tolak</h3>
                     <p><a href="https://fascinating-kringle-46fbb9.netlify.app/">Click Here</a>.</p>
                 </div>
                 <div class="portfolio-item">
